@@ -19,7 +19,6 @@ import org.junit.Test;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.sql.Date;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.time.*;
@@ -38,201 +37,201 @@ import static org.junit.Assert.*;
 public class TypeConverterTest {
 
     @ClassRule
-    public static DatabaseRule dbr = new DatabaseRule();
+    public static DatabaseRule dbr = DatabaseRule.defaultConfiguration();
 
     @Test
     public void shouldConvertNullToString() {
-        assertNull(dbr.query("select NULL").at(0).getString(0));
+        assertNull(dbr.query("select NULL").index(0).getString(0));
     }
 
     @Test
     public void shouldConvertUnspecifiedToString() {
-        assertEquals("test", dbr.query("select 'test'").at(0).getString(0));
+        assertEquals("test", dbr.query("select 'test'").index(0).getString(0));
     }
 
     @Test
     public void shouldConvertTextToString() {
-        assertEquals("test", dbr.query("select 'test'::TEXT").at(0).getString(0));
+        assertEquals("test", dbr.query("select 'test'::TEXT").index(0).getString(0));
     }
 
     @Test
     public void shouldConvertVarcharToString() {
-        assertEquals("test", dbr.query("select 'test'::VARCHAR").at(0).getString(0));
+        assertEquals("test", dbr.query("select 'test'::VARCHAR").index(0).getString(0));
     }
 
     @Test
     public void shouldConvertCharToString() {
-        assertEquals("test ", dbr.query("select 'test'::CHAR(5)").at(0).getString(0));
+        assertEquals("test ", dbr.query("select 'test'::CHAR(5)").index(0).getString(0));
     }
 
     @Test
     public void shouldConvertSingleCharToString() {
-        assertEquals("X", dbr.query("select 'X'::CHAR AS single").at(0).getString("single"));
+        assertEquals("X", dbr.query("select 'X'::CHAR AS single").index(0).getString("single"));
     }
 
     @Test
     public void shouldConvertNullToLong() {
-        assertNull(dbr.query("select NULL").at(0).getLong(0));
+        assertNull(dbr.query("select NULL").index(0).getLong(0));
     }
 
     @Test
     public void shouldConvertInt8ToLong() {
-        assertEquals(5000L, dbr.query("select 5000::INT8").at(0).getLong(0).longValue());
+        assertEquals(5000L, dbr.query("select 5000::INT8").index(0).getLong(0).longValue());
     }
 
     @Test
     public void shouldConvertInt4ToLong() {
-        assertEquals(4000L, dbr.query("select 4000::INT4 AS R").at(0).getLong("r").longValue());
+        assertEquals(4000L, dbr.query("select 4000::INT4 AS R").index(0).getLong("r").longValue());
     }
 
     @Test
     public void shouldConvertInt2ToLong() {
-        assertEquals(4000L, dbr.query("select 4000::INT2").at(0).getLong(0).longValue());
+        assertEquals(4000L, dbr.query("select 4000::INT2").index(0).getLong(0).longValue());
     }
 
     @Test
     public void shouldConvertInt4ToInteger() {
-        assertEquals(5000, dbr.query("select 5000::INT4 AS I").at(0).getInt("i").intValue());
+        assertEquals(5000, dbr.query("select 5000::INT4 AS I").index(0).getInt("i").intValue());
     }
 
     @Test
     public void shouldConvertInt2ToInteger() {
-        assertEquals(4000, dbr.query("select 4000::INT2").at(0).getInt(0).intValue());
+        assertEquals(4000, dbr.query("select 4000::INT2").index(0).getInt(0).intValue());
     }
 
     @Test
     public void shouldConvertInt2ToShort() {
-        assertEquals(3000, dbr.query("select 3000::INT2").at(0).getShort(0).shortValue());
+        assertEquals(3000, dbr.query("select 3000::INT2").index(0).getShort(0).shortValue());
     }
 
     @Test
     public void shouldConvertInt2ToShortWithName() {
-        assertEquals(128, dbr.query("select 128::INT2 AS S").at(0).getShort("s").shortValue());
+        assertEquals(128, dbr.query("select 128::INT2 AS S").index(0).getShort("s").shortValue());
     }
 
     @Test
     public void shouldConvertCharToByte() {
-        assertEquals(65, dbr.query("select 65::INT2").at(0).getByte(0).byteValue());
+        assertEquals(65, dbr.query("select 65::INT2").index(0).getByte(0).byteValue());
     }
 
     @Test
     public void shouldConvertCharToByteWithName() {
-        assertEquals(65, dbr.query("select 65::INT2 as C").at(0).getByte("c").byteValue());
+        assertEquals(65, dbr.query("select 65::INT2 as C").index(0).getByte("c").byteValue());
     }
 
     @Test
     public void shouldConvertInt8ToBigInteger() {
-        assertEquals(new BigInteger("9223372036854775807"), dbr.query("select 9223372036854775807::INT8").at(0)
+        assertEquals(new BigInteger("9223372036854775807"), dbr.query("select 9223372036854775807::INT8").index(0)
                 .getBigInteger(0));
     }
 
     @Test
     public void shouldConvertInt4ToBigInteger() {
-        assertEquals(new BigInteger("1000"), dbr.query("select 1000::INT4 as num").at(0).getBigInteger("num"));
+        assertEquals(new BigInteger("1000"), dbr.query("select 1000::INT4 as num").index(0).getBigInteger("num"));
     }
 
     @Test
     public void shouldConvertFloat8ToBigDecimal() {
-        assertEquals(new BigDecimal("123.56"), dbr.query("select 123.56::FLOAT8").at(0).getBigDecimal(0));
+        assertEquals(new BigDecimal("123.56"), dbr.query("select 123.56::FLOAT8").index(0).getBigDecimal(0));
     }
 
     @Test
     public void shouldConvertFloat4ToBigDecimal() {
-        assertEquals(new BigDecimal("789.01"), dbr.query("select 789.01::FLOAT4 as sum").at(0).getBigDecimal("sum"));
+        assertEquals(new BigDecimal("789.01"), dbr.query("select 789.01::FLOAT4 as sum").index(0).getBigDecimal("sum"));
     }
 
     @Test
     public void shouldConvertNumericToBigDecimal() {
-        assertEquals(new BigDecimal("1223423.01"), dbr.query("select 1223423.01::NUMERIC as sum").at(0).getBigDecimal("sum"));
+        assertEquals(new BigDecimal("1223423.01"), dbr.query("select 1223423.01::NUMERIC as sum").index(0).getBigDecimal("sum"));
     }
 
     @Test
     public void shouldConvertFloat4ToDouble() {
-        assertEquals((Double) 1223420.0, dbr.query("select 1223420.0::FLOAT4 as sum").at(0).getDouble("sum"));
+        assertEquals((Double) 1223420.0, dbr.query("select 1223420.0::FLOAT4 as sum").index(0).getDouble("sum"));
     }
 
     @Test
     public void shouldConvertNumericToDouble() {
-        assertEquals((Double) 1223423.01, dbr.query("select 1223423.01::NUMERIC as sum").at(0).getDouble("sum"));
+        assertEquals((Double) 1223423.01, dbr.query("select 1223423.01::NUMERIC as sum").index(0).getDouble("sum"));
     }
 
     @Test
     public void shouldConvertDateToDate() {
         assertEquals(LocalDate.parse("2014-01-31"),
-                dbr.query("select '2014-01-31'::DATE").at(0).getLocalDate(0));
+                dbr.query("select '2014-01-31'::DATE").index(0).getLocalDate(0));
     }
 
     @Test
     public void shouldConvertDateToDateWithName() {
-        assertEquals(LocalDate.parse("2014-02-21"), dbr.query("select '2014-02-21'::DATE as D").at(0)
+        assertEquals(LocalDate.parse("2014-02-21"), dbr.query("select '2014-02-21'::DATE as D").index(0)
                 .getLocalDate("d"));
     }
 
     @Test
     public void shouldConvertTimeToTime() {
-        assertEquals(Time.valueOf(LocalTime.parse("10:15:31.123")), dbr.query("select '10:15:31.123'::TIME").at(0)
+        assertEquals(Time.valueOf(LocalTime.parse("10:15:31.123")), dbr.query("select '10:15:31.123'::TIME").index(0)
                 .getTime(0));
     }
 
     @Test
     public void shouldConvertZonedTimeToTime() {
         assertEquals(Time.valueOf(OffsetTime.parse("23:59:59.999Z").toLocalTime()), dbr.query("select '23:59:59.999Z'::TIMETZ as zoned")
-                .at(0).getTime("zoned"));
+                                                                                       .index(0).getTime("zoned"));
     }
 
     @Test
     public void shouldConvertTimestampToTimestamp() {
         assertEquals(Timestamp.from(LocalDateTime.parse("2014-02-21T23:59:59.999").toInstant(ZoneOffset.UTC)),
-                dbr.query("select '2014-02-21 23:59:59.999'::TIMESTAMP as ts").at(0).getTimestamp("ts"));
+                dbr.query("select '2014-02-21 23:59:59.999'::TIMESTAMP as ts").index(0).getTimestamp("ts"));
     }
 
     @Test
     public void shouldConvertTimestampWithShortMillisToTimestamp() {
         assertEquals(Timestamp.from(LocalDateTime.parse("2014-02-21T23:59:59.990").toInstant(ZoneOffset.UTC)),
-                dbr.query("select '2014-02-21 23:59:59.99'::TIMESTAMP as ts").at(0).getTimestamp("ts"));
+                dbr.query("select '2014-02-21 23:59:59.99'::TIMESTAMP as ts").index(0).getTimestamp("ts"));
     }
 
     @Test
     public void shouldConvertTimestampWithNoMillisToTimestamp() {
         assertEquals(Timestamp.from(LocalDateTime.parse("2014-02-21T23:59:59").toInstant(ZoneOffset.UTC)),
-                dbr.query("select '2014-02-21 23:59:59'::TIMESTAMP as ts").at(0).getTimestamp("ts"));
+                dbr.query("select '2014-02-21 23:59:59'::TIMESTAMP as ts").index(0).getTimestamp("ts"));
     }
 
     @Test
     public void shouldConvertZonedTimestampToTimestamp() {
         assertEquals(Timestamp.from(Instant.from(ZonedDateTime.parse("2014-02-21T23:59:59.999Z"))),
-                dbr.query("select '2014-02-21 23:59:59.999Z'::TIMESTAMPTZ as ts").at(0).getTimestamp("ts"));
+                dbr.query("select '2014-02-21 23:59:59.999Z'::TIMESTAMPTZ as ts").index(0).getTimestamp("ts"));
     }
 
     @Test
     public void shouldConvertZonedTimestampWithNanosToTimestamp() {
         assertEquals(Timestamp.from(Instant.parse("2014-02-21T23:59:59.000999Z")),
-                dbr.query("select '2014-02-21 23:59:59.000999+00'::TIMESTAMPTZ as ts").at(0).getTimestamp("ts"));
+                dbr.query("select '2014-02-21 23:59:59.000999+00'::TIMESTAMPTZ as ts").index(0).getTimestamp("ts"));
     }
 
     @Test
     public void shouldConvertByteAToBytes() {
-        assertArrayEquals(new byte[]{0x41, 0x41}, dbr.query("select '\\x4141'::BYTEA").at(0).getBytes(0));
+        assertArrayEquals(new byte[]{0x41, 0x41}, dbr.query("select '\\x4141'::BYTEA").index(0).getBytes(0));
     }
 
     @Test
     public void shouldConvertByteAToBytesWithName() {
-        assertArrayEquals(new byte[]{0x41, 0x41}, dbr.query("select $1::BYTEA as bytes", List.of("AA")).at(0)
+        assertArrayEquals(new byte[]{0x41, 0x41}, dbr.query("select $1::BYTEA as bytes", List.of("AA")).index(0)
                 .getBytes("bytes"));
     }
 
     @Test
     public void shouldConvertBoolean() {
-        assertTrue(dbr.query("select $1::BOOL as b", List.of(true)).at(0).getBoolean("b"));
-        assertFalse(dbr.query("select $1::BOOL as b", List.of(false)).at(0).getBoolean(0));
-        assertNull(dbr.query("select $1::BOOL as b", Collections.singletonList(null)).at(0).getBoolean("b"));
-        assertArrayEquals(new Boolean[]{true, false}, dbr.query("select '{true, false}'::BOOL[]").at(0).getArray(0, Boolean[].class));
+        assertTrue(dbr.query("select $1::BOOL as b", List.of(true)).index(0).getBoolean("b"));
+        assertFalse(dbr.query("select $1::BOOL as b", List.of(false)).index(0).getBoolean(0));
+        assertNull(dbr.query("select $1::BOOL as b", Collections.singletonList(null)).index(0).getBoolean("b"));
+        assertArrayEquals(new Boolean[]{true, false}, dbr.query("select '{true, false}'::BOOL[]").index(0).getArray(0, Boolean[].class));
     }
 
     @Test
     public void shouldConvertUUID() {
         UUID uuid = UUID.randomUUID();
-        PgRow row = (PgRow) dbr.query("select $1::UUID as uuid", singletonList(uuid)).at(0);
+        PgRow row = (PgRow) dbr.query("select $1::UUID as uuid", singletonList(uuid)).index(0);
         assertEquals(uuid, row.get("uuid"));
     }
 
